bugs now face the food they move towards

--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-#gametitle{
+﻿#gametitle{
 	font-size:40px;
 	font-family:Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", sans-serif;
 	color:#C80C0F;
